# fundest-1.2

./: CMakeLists.txt  Makefile  Makefile.icc  Makefile.vc  README.md  README.txt  buckets.c  calc_fund_coeffs.c  calc_fund_coeffs.h  compiler.h  fundest.c  fundest.h  fundest_demo.c  gric.c  linalg.c  lqs.c  lqs.h  misc.c  norm.c  util.h
matlab/: Makefile  Makefile.w32  README.txt  fundest.c  fundest.m  fundest_demo.m
